<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Home page!</string>
    <string name="app_name">Datalogger4Android</string>
    
    <!-- FOR all dialog buttons -->
    <string name="dialog_confirm">Submit</string>
    <string name="dialog_cancel">Cancel</string>
 	
 	
 	<!-- FOR login_dialog -->
 	<string name="login_dialog_title">Manage Account</string>
 	<string name="login_logout_title">* Logout current account</string>
 	<string name="login_logout_current">You are: </string>
 	<string name="login_logout_button">Logout</string>
 	<string name="login_logout_confirm">You will log out and become guest, are you sure to log out?</string>
 	<string name="login_title">* Login/Switch to another account</string>
    <string name="login_name">Username</string>
    <string name="login_pw">Password</string>
    <string name="login_auto">Automatic login for me</string>
    <string name="login_reg">Register a new account</string>
    
    <!-- FOR add_feed_dialog -->
	<string name="add_feed_dialog_title">Add Feed to Feed List</string>
	<string name="add_feed_choose_exist">* Import From Existing Feed</string>
	<string name="add_feed_exist_id">Feed ID</string>
	<string name="add_feed_exist_key">Permission</string>
	<string name="add_feed_choose_new">* Create New Feed</string>
	<string name="add_feed_new_title">Name</string>
	<string name="add_feed_new_type">Type</string>
 	<string name="add_feed_new_status">Status</string>
 	
	<!-- FOR edit_delete_feed_dialog -->
	<string name="edit_delete_dialog_title">Modify This Feed</string>
	<string name="edit_feed">* Edit This Feed</string>
	<string name="edit_feed_name">Rename</string>
	<string name="edit_feed_status">Change Status</string>
	<string name="edit_feed_update_location">Update Feed Location</string>
	<string name="edit_feed_update_loc_button">Update</string>
	<string name="delete_feed">* Delete This Feed</string>
	<string name="delete_feed_message">Delete This Feed:</string>
	<string name="delete_feed_button">Delete</string>
	<string name="delete_feed_confirm_title">Are you sure you want to delete this feed?</string>
	
	<!-- FOR share_feed_dialog -->
	<string name="share_feed_title">Share This Feed With Friend</string>
	<string name="share_feed_friend_email">Friend Email</string>
	<string name="share_feed_permission">Permission</string>
	<string name="share_feed_permission_view">View</string>
	<string name="share_feed_permission_full">Full</string>

	<!-- FOR feed_info_dialog -->
	<string name="feed_info_title">Feed Detail</string>
	<string name="feed_info_feed_name">Title:</string>
	<string name="feed_info_feed_id">ID:</string>
	<string name="feed_info_feed_own">Owned:</string>
	<string name="feed_info_feed_per_level">Access:</string>
	<string name="feed_info_feed_location">Location (lon, lat, alt):</string>
	<string name="feed_info_feed_datacount">Data Number:</string>
	
	<!-- FOR EmailService: send permission -->
	<string name="email_title">Friend Permission From Datalogger4Android</string>
	<string name="email_opening">Dear my friend:\n\nThis email is sent from my Datalogger for Android.\nI would like to share the following feed with you:</string>
	<string name="email_body_feed_name">\n\nFeed Name: </string>
	<string name="email_body_feed_id">\nFeed ID: </string>
	<string name="email_body_key">\n\nPermission Key: </string>
	<string name="email_body_level">\nPermission Level: </string>
	<string name="email_body_sender">\n\nSent From: </string>
	<string name="email_ending">\nThanks and have a nice day.</string>
	
	<!-- FOR EmailService: send diagram -->
	<string name="email_diagram_title">Data Diagram From Datalogger4Android</string>
	<string name="email_diagram_opening">Dear my friend:\n\nThis email is sent from my Datalogger for Android.\nI would like to share a data diagram (in the attachment) with you. \nThe infomation about this diagram:</string>
	<string name="email_diagram_feed_name">\n\nFeed Name: </string>
	<string name="email_diagram_feed_ID">(ID: </string>
	<string name="email_diagram_data_name">)\nData Stream Name: </string>
	<string name="email_diagram_description">\n\nDescription:\n </string>
	<string name="email_diagram_sender">\n\n\nFrom: </string>
	<string name="email_diagram_ending">\nEnjoy the diagram and have a nice day.</string>
	
	<!-- FOR share_diagram_dialog -->
	<string name="share_diagram_title">Share Diagram With Friend</string>
	<string name="share_diagram_friend_email">Friend Email</string>
	<string name="share_diagram_description">Description:</string>
	
	<!-- FOR edit_diagram_dialog -->
	<string name="edit_diagram_title">Configure This Diagram</string>
	<string name="edit_diagram_info">Current Duration: </string>
	<string name="edit_diagram_set_duration">Change To</string>
	<string-array name="time_unit_list">
	    <item>minute</item>
	    <item>hour</item>
	    <item>day</item>
	    <item>week</item>
	    <item>month</item>
	</string-array>
	<string name="edit_diagram_notice">Notice: the maximum duration allowed is 23 months or 730 days.</string>
	
	<!-- FOR edit_delete_data_dialog -->
	<string name="edit_data_dialog_title">Modify This Data</string>
	<string name="edit_data">* Edit This Data Stream</string>
	<string name="edit_data_tags">Tags:</string>
	<string name="edit_data_notice">Notice: Please use \",\" to seperate different tags</string>
	<string name="delete_data">* Delete This Data Stream</string>
	<string name="delete_data_message">Delete This Data:</string>
	<string name="delete_data_button">Delete</string>
	<string name="delete_data_confirm_title">Are you sure you want to delete this data stream?</string>
	
	<!-- FOR update_feed_dialog -->
	<string name="update_feed">Update Current Feed</string>
	<string name="update_feed_selected">Selected Data:</string>
	<string name="update_feed_interval">Interval (in minutes)</string>
	<string name="update_feed_totalTime">Total Runtime (in minutes)</string>
	
	<!-- FOR add_datastream_dialog -->
	<string name="add_datastream">Add Sensor Data</string>
	<string name="add_datastream_name">Name</string>
	<string name="add_datastream_select">Sensor</string>
	<string-array name="sensor_list">
		<item>Sound</item>
		<item>Accelerometer</item>
		<item>Magnetic Field</item>
		<item>Orientation(deprecated)</item>
		<item>Gyroscope</item>
		<item>Light</item>
		<item>Pressure</item>
		<item>Temperature(deprecated)</item>
		<item>Proximity</item>
		<item>Gravity</item>
		<item>Linear Acceleration</item>
		<item>Rotation Vector</item>
		<item>Relative Humidity</item>
		<item>Ambient Temperature</item>
	</string-array>
	
	<string-array name="sensor_unit">
	    <item>dB</item>
	    <item>m/s^2</item>
	    <item>uT</item>
	    <item>degree</item>
	    <item>radian/s</item>
	    <item>lux</item>
	    <item>hPa</item>
	    <item>degree Celsius</item>
	    <item>cm</item>
	    <item>m/s^2</item>
	    <item>m/s^2</item>
	    <item>(No Unit)</item>
	    <item>percent</item>
	    <item>degree Celsius</item>
	</string-array>
	
</resources>