<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_data"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/textView0" >

            <TextView
                android:id="@+id/textView1"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_data_tags"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="3"  />

            <EditText
                android:id="@+id/edit_data_new_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_weight="1" />

        </TableRow>
        
		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/tableRow1"
		    android:text="@string/edit_data_notice"
		    android:textAppearance="?android:attr/textAppearanceSmall" />
		
    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/delete_data"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/textView3" >

            <TextView
                android:id="@+id/textView4"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_data_message"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1" />

            <Button
                android:id="@+id/delete_data_delete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_data_button"
                android:layout_weight="1" />

        </TableRow>

		
    
</RelativeLayout>