<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/login_logout_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<TableRow
            android:id="@+id/tableRow0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/textView0" >

            <TextView
                android:id="@+id/textView4"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_logout_current"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/current_account"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1" />
            
            <Button
                android:id="@+id/current_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_logout_button"
                android:layout_weight="1" />

        </TableRow>
    
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_below="@+id/tableRow0"
            android:text="@string/login_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_below="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_weight="3"
                android:text="@string/login_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

	        <EditText
	            android:id="@+id/login_username"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="text"/>
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_below="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
	        
             <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_weight="3"
                android:text="@string/login_pw"
                android:textAppearance="?android:attr/textAppearanceSmall" />

	        <EditText
	            android:id="@+id/login_pw"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="textPassword"/>
	        
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_below="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/login_autoCheck"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
	            android:layout_weight="1"
                android:text="@string/login_auto" />

            <CheckBox
                android:id="@+id/login_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
	            android:layout_weight="1"
                android:text="@string/login_reg" />
	        
        </TableRow>


        
</RelativeLayout>