<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    
    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_diagram_info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/diagram_current_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:layout_below="@+id/tableRow0" >
        
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_diagram_set_duration"
	        android:layout_weight="1" 
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <EditText
	        android:id="@+id/diagram_new_duration"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:layout_weight="1" />
		    
	    <Spinner
	        android:id="@+id/diagram_new_duration_unit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
        
        
    </TableRow>
    
	<TableRow
	   android:id="@+id/tableRow2"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:layout_below="@+id/tableRow1" >
	    
	   	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_diagram_notice"
	        android:textStyle="italic"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
    </TableRow>
            
    
    
</RelativeLayout>